added toast and icon for title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <link rel="icon" type="image/svg+xml" href="/image.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Send Files - Files Everywhere</title>
+
+    <title></title>
+    <meta name="description" content="Send and receive files securely. Built using MERN stack, hosted on Vercel and Render. Auto-deletes after 5 minutes." />
+    <meta name="keywords" content="file transfer, send files, receive files, secure sharing, MERN stack, React, Node.js, Vercel, Render" />
+    <meta name="author" content="Avi Garg" />
+
+    <meta property="og:title" content="Send Files - Files Everywhere" />
+    <meta property="og:description" content="Send and receive files securely. Files are auto-deleted after 5 minutes!" />
+    <meta property="og:image" content="https://send-files-xi.vercel.app/preview.png" />
+    <meta property="og:url" content="https://send-files-xi.vercel.app" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Send Files - Files Everywhere" />
+    <meta name="twitter:description" content="Securely share files using unique codes. Auto-deletion in 5 minutes." />
+    <meta name="twitter:image" content="https://send-files-xi.vercel.app/preview.png" />
   </head>
   <body>
     <div id="root"></div>
